src/objects/DealRegistrationGuidelines__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Deal Registration Guidelines</label>
</CustomObject>